# abNinjam

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: cmake.yml
cmake/: FindCairo.cmake  FindLV2.cmake  FindLiblo.cmake  FindVorbis.cmake  FindVorbisEnc.cmake  FindXKBCommon.cmake  FindXKBCommonX11.cmake  Findvorbisenc.cmake  LV2Config.cmake  NJClient.cmake  VSTConfig.cmake  abNINJAMConfig.cmake  abNinjamConfig.cmake  abNinjamUninstall.cmake
common/: CMakeLists.txt  common.h  filesystem.hpp
common/include/: connectionproperties.h  fileutil.h  licensedialog.h  log.h  ninjamclient.h  ninjamclientstatus.h  osctransmitter.h  remotechannel.h  remoteuser.h  remoteuserchannel.h  stringutil.h
common/source/: connectionproperties.cpp  fileutil.cpp  licensedialog.cpp  ninjamclient.cpp  osctransmitter.cpp  stringutil.cpp
common/src/: connectionproperties.cpp  fileutil.cpp  licensedialog.cpp  ninjamclient.cpp  osctransmitter.cpp  remotechannel.cpp  remoteuser.cpp  remoteuserchannel.cpp
lv2/: CMakeLists.txt  LICENSE.md.in  abNinjam.ttl.in
lv2/cmake/modules/: SetupLV2LibraryDefaultPath.cmake
lv2/include/: ports.h
lv2/source/: abNinjam.cpp
lv2/src/: abNinjam.cpp
scripts/: abNinjam.pc.in
vst/: CMakeLists.txt  VstPluginDefs.h.in
vst/cmake/: Vst3.cmake
vst/cmake/modules/: SetupVST3LibraryDefaultPath.cmake
vst/include/: X11RunLoop.h  abuimessagecontroller.h  abvst3editor.h  chatcontroller.h  connectionproperties.h  editorsizecontroller.h  fileutil.h  hostcontroller.h  licensedialog.h  log.h  messagetypes.h  metronomevolumeparameter.h  ninjamclient.h  ninjamclientstatus.h  plugcontroller.h  plugids.h  plugprocessor.h  stringutil.h  version.h  volumeparameter.h
vst/mac/: Info.plist  Plugin.icns
vst/resource/: Info.plist  plug-base64.uidesc  plug.uidesc  plug2.uidesc
vst/source/: X11RunLoop.cpp  abvst3editor.cpp  connectionproperties.cpp  fileutil.cpp  hostcontroller.cpp  licensedialog.cpp  metronomevolumeparameter.cpp  ninjamclient.cpp  plugcontroller.cpp  plugfactory.cpp  plugprocessor.cpp  stringutil.cpp
vst/src/: X11RunLoop.cpp  abvst3editor.cpp  chatcontroller.cpp  editorsizecontroller.cpp  hostcontroller.cpp  metronomevolumeparameter.cpp  plugcontroller.cpp  plugfactory.cpp  plugprocessor.cpp  volumeparameter.cpp
